--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "webpack --config webpack.production.config.js",
-    "clean": "rm build/bundle*"
+    "clean": "rm build/*"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +14,16 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.1",
     "css-loader": "^0.9.1",
+    "file-loader": "^0.8.1",
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
+    "lodash": "^3.5.0",
     "react": "^0.12.2",
     "react-hot-loader": "^1.1.5",
+    "react-resizable": "^0.2.3",
+    "reflux": "^0.2.7",
     "style-loader": "^0.8.3",
+    "url-loader": "^0.5.5",
     "webpack": "^1.6.0",
     "webpack-dev-server": "^1.7.0"
   }
